# r1d1

./: .gitignore  GETTING_STARTED.md  PROJECT_OVERVIEW.md  README.md  RUNPOD_GUIDE.md  USAGE.md  pyproject.toml  run_experiment.py  runpod_setup.sh
examples/: analyze_results.py  medium_test.py  memory_efficient_experiment.py  quick_gsm8k_test.py  quick_test.py
src/: __init__.py  activation_extractor.py  config.py  data_loader.py  direction_calculator.py  experiment.py  hooked_hf_model.py  intervention.py  model_loader.py
