[project]
name = "reasoning-direction"
version = "0.1.0"
description = "Reproducing experiments on reasoning direction in LLM activation space"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformer-lens>=1.17.0",
    "transformers>=4.36.0",
    "datasets>=2.14.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "einops>=0.7.0",
    "jaxtyping>=0.2.0",
    "hf-transfer>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipython>=8.12.0",
]

